--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 ​
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +10,39 @@
   <link rel="stylesheet" href="css/style.css">
   <title>The Random Developer Calculator</title>
 </head>
-​
+
 <body>
-    <header>
-        <nav class="navbar">
-            <span class="navbar-toggle" id="js-navbar-toggle">
-                    <i class="fas fa-bars"></i>
-                </span>
-            <h1><a href="#" class="logo">Secouez-moi...</a></h1>
-            <ul class="main-nav" id="js-menu">
-              <li>
-                <a href="#" class="nav-links">Informations</a>
-              </li>
-              <li>
-                <a href="#" class="nav-links">About Us</a>
-              </li>
-              <li>
-                <a href="#" class="nav-links">Contact Us</span></a>
-              </li>
-              <li>
-                <a href="#" class="nav-links"><span class="connecter">Se connecter</span></a>
-              </li>
-            </ul>
-          </nav>
-        
-Rédu
+  <div class="fullpage">
+    <div class="main">
+      <div class="header">
+        Logo, titre
+      </div>
+      <div class="middle">
+        <div class="content">
+          <h1>Modèle de page avec flex</h1>
+          <p>
+            Contenu
+          </p>
+        </div>
+        <!--content-->
+        <div class="sidebar">
+          <div id="cellphone">
+            <p id="noms"></p>
+            <img src="img/main1.png" width="80%" height="80%" alt="main">
+            <button id="callTOaction">Cliquez-ici</button>
+          </div>
+        </div>
+      </div>
+      <!--middle-->
+    </div>
+    <!--main-->
+    <div class="footer">
+      Copyright
+    </div>
+  </div>
+  <!--fullpage-->
+  <script src="javascript/script.js"></script>
+
+</body>
+
+</html>
