--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="sidebar">
           <div id="cellphone">
             <p id="noms"></p>
-            <img src="img/main1.png" width="80%" height="80%" alt="main">
+            <img src="img/main.png" width="80%" height="80%" alt="main">
             <button id="callTOaction">Cliquez-ici</button>
           </div>
         </div>
