--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <div class="middle">
         <div class="content">
           <h1>Modèle de page avec flex</h1>
-          <p>
-            Contenu
-          </p>
+            <div class="form">
+              <input type="text" name="item" id="item" />
+              <button id="submit">Ajouter un nom</button>
+         </div>
         </div>
         <!--content-->
         <div class="sidebar">
