--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
   <div class="fullpage">
     <div class="main">
       <div class="header">
-        Logo, titre
+          <nav class="navbar">
+          </nav>
+        <div class="logoanim">
+        <img src="img/secouez-moiLogo.svg" alt="secouez-moi" >
+      </div>
       </div>
       <div class="middle">
         <div class="content">
-          <h1>Modèle de page avec flex</h1>
-            <div class="form">
-              <input type="text" name="item" id="item" />
-              <button id="submit">Ajouter un nom</button>
-         </div>
+          <h1>Trouvez votre DEV</h1>
+            <form>
+              
+                <label for="ajouter">Ajoutez un nom</label> :
+                <input type="text" name="name" id="name" >
+              
+            <input type="submit" value="+">
+            </form>
         </div>
         <!--content-->
         <div class="sidebar">
@@ -38,7 +45,6 @@
     </div>
     <!--main-->
     <div class="footer">
-      Copyright
     </div>
   </div>
   <!--fullpage-->
