--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div class="header">
           <nav class="navbar">
           </nav>
-        <div class="logoanim">
-        <img src="img/secouez-moiLogo.svg" alt="secouez-moi" >
+          <div id="logoanim">
+          <img src="img/secouez-moiLogo.svg" alt="secouez-moi" >
       </div>
       </div>
       <div class="middle">
         <div class="content">
-          <h1>Trouvez votre DEV</h1>
+          <h2>Trouvez votre DEV</h2>
             <form>
               
                 <label for="ajouter">Ajoutez un nom</label> :
