code random andrea + champ saisie+ navbar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
             <input type="submit" value="+">
             </form>
         </div>
+        <!-------partie andrea champ saisie-->
+        <main>
+          <div id="generatorpart">
+                      <h1>Random Generator</h1>
+  
+              <div class="form">
+                   <input type="text" name="item" id="item"  />
+                   <button id="submit">+</button>
+               </div>    
+    
+              <section id="list"></section>
+              <section id="generator">
+                     <button id="generate">GENERATE</button>
+                <div id="generated"></div>
+              </section>
+          </div>
+  </main>
+  <!---------------------fin partie andrea champ saisie-->
         <!--content-->
         <div class="sidebar">
           <div id="cellphone">
