ajouté le code pour navbar+completé le html partie navbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+    <nav>
+        <div class="topnav">
+            <a href="#home" class="active">Secouez-moi...</a>
+            <a href="#news">Info</a>
+            <a href="#contact">Se connecter</a>
+            <a href="#about">Créer un compte</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
+          </div>
+        </nav> 
   <div class="fullpage">
     <div class="main">
       <div class="header">
