--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </label>
     <a href="#" class="logo">Secouez-moi...</a>
     <input type="checkbox" id="chkToggle"></input>
-    <ul class="main-nav" id="js-menu">
+    <ul class="main-nav">
       <li>
         <a href="#" class="nav-links">Info</a>
       </li>
@@ -45,7 +45,7 @@
             <input type="text" name="name" id="name">
 
             <input type="submit" value="+">
-
+ 
           </form>
 
             </form>
