--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="fullpage">
     <header>
         <nav class="navbar">
-            <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
+            <label class="navbar-toggle"  for="chkToggle">
                     <i class="fa fa-bars"></i>
                 </label>
             <a href="#" class="logo"></a>
@@ -43,24 +43,7 @@
         </form>
       </div>
 
-  <nav class="navbar">
-    <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
-            <i class="fa fa-bars"></i>
-        </label>
-    <a href="#" class="logo">Secouez-moi...</a>
-    <input type="checkbox" id="chkToggle"></input>
-    <ul class="main-nav">
-      <li>
-        <a href="#" class="nav-links">Info</a>
-      </li>
-      <li>
-        <a href="#" class="nav-links">Créer un compte</a>
-      </li>
-      <li>
-        <a href="#" class="nav-links">Se connecter</a>
-      </li>
-    </ul>
-  </nav>
+  
    <main>
       <div class="middle">
         <div class="content">
