--- a/index.html
+++ b/index.html
@@ -67,16 +67,11 @@
           <h1>Trouvez votre DEV</h1>
           <form>
             <label for="ajouter">Ajoutez un nom</label> :
-            <input type="text" name="name" id="name">
+            <input type="text" name="name" id="name" >
 
             <input type="submit" value="+">
  
-          </form>
-
-            </form>
             <section id="list"></section>
-        </div>
-       
         <!--content-->
         <div class="sidebar">
           <div id="cellphone">
@@ -91,7 +86,7 @@
             <div class="secouezmoi">
               <img src="img/secouez-moiLogo.svg" alt="secouez-moi" width="200px" >
             </div>
-            <button class="btn-grad" id="callTOaction">Cliquez-ici
+            <button class="btn-grad" id="callTOaction">Cliquez-ici >
             </button>
           </div>
           <div class="hand">
