la bonne version

--- a/index.html
+++ b/index.html
@@ -33,17 +33,6 @@
             </ul>
           </nav>
     </header>
-    <div class="middle">
-      <div class="content">
-        <h1>Trouvez votre DEV</h1>
-        <form>
-          <label for="ajouter">Ajoutez un nom</label> :
-          <input type="text" name="name" id="name">
-          <input type="submit" value="+">
-        </form>
-      </div>
-
-  
    <main>
       <div class="middle">
         <div class="content">
@@ -51,21 +40,10 @@
           <form>
             <label for="ajouter">Ajoutez un nom</label> :
             <input type="text" name="name" id="name">
-
-            <input type="submit" value="+">
- 
+            <input type="submit" value="+"> 
           </form>
-
-            </form>
-            <section id="list"></section>
-        </div>
-       
+          </div>
         <!--content-->
-        <div class="sidebar">
-          <div id="cellphone">
-            <p id="noms"></p>
-            <img src="img/main.png" width="80%" height="80%" alt="main">
-            <button id="callTOaction">Cliquez-ici</button>
       <div class="sidebar">
         <div id="cellphone">
           <div class="boite">
@@ -84,6 +62,7 @@
         </div>
       </div>
     </div>
+    </main>
     <footer>
     </footer>
   </div>
