--- a/index.html
+++ b/index.html
@@ -14,24 +14,16 @@
 <body>
   <div class="fullpage">
     <header>
-        <nav class="navbar">
-            <label class="navbar-toggle"  for="chkToggle">
-                    <i class="fa fa-bars"></i>
-                </label>
-            <a href="#" class="logo"></a>
-            <input type="checkbox" id="chkToggle">
-            <ul class="main-nav">
-              <li>
-                <a href="#" class="nav-links">Info</a>
-              </li>
-              <li>
-                <a href="#" class="nav-links">Créer un compte</a>
-              </li>
-              <li>
-                <a href="#" class="nav-links">Se connecter</a>
-              </li>
-            </ul>
-          </nav>
+        <div class="banner-area">
+          <h1>Secouez-moi...</h1>
+          <label for="res-menu" class="res-menu">Toggle Menu</label>
+          <input type ="checkbox" id="res-menu">
+          <ul class="menu-area">
+            <li><a href="#">Info</a></li>
+            <li><a href="#">Créer un compte</a></li>
+            <li><a href="#">Se connecter</a></li>
+          </ul>
+        </div>
     </header>
    <main>
       <div class="middle">
