--- a/index.html
+++ b/index.html
@@ -7,24 +7,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Anton%7CMerriweather+Sans&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Secouez-moi</title>
 </head>
 
 <body>
-  <div class="fullpage">
+  
     <header>
-        <div class="banner-area">
-          <h1>Secouez-moi...</h1>
-          <label for="res-menu" class="res-menu">Toggle Menu</label>
-          <input type ="checkbox" id="res-menu">
-          <ul class="menu-area">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Créer un compte</a></li>
-            <li><a href="#">Se connecter</a></li>
-          </ul>
-        </div>
+      <div class="menu-toggle" id="hamburger">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </div>
+    <div class="overlay"></div>
+    <div class="container">
+        <nav>
+            <h1 class="brand"><a href="index.html">Secouez-moi...</a></h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Info</a></li>
+                <li><a href="#">Créer un compte</a></li>
+                <li><a href="#">Se connecter</a></li>
+            </ul>
+        </nav>
+    </div>
     </header>
+    <div class="fullpage">
    <main>
       <div class="middle">
         <div class="content">
