--- a/index.html
+++ b/index.html
@@ -7,25 +7,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Anton%7CMerriweather+Sans&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Secouez-moi</title>
 </head>
 
 <body>
-  <div class="fullpage">
+  
     <header>
-        <div class="banner-area">
-          <h1>Secouez-moi...</h1>
-          <label for="res-menu" class="res-menu">Toggle Menu</label>
-          <input type ="checkbox" id="res-menu">
-          <ul class="menu-area">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Créer un compte</a></li>
-            <li><a href="#">Se connecter</a></li>
-          </ul>
+        <div class="menu-toggle" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="overlay"></div>
+        <div class="container">
+            <nav>
+                <h1 class="brand"><a href="index.html"><span>Secouez</span>-moi...</a></h1>
+                <ul>
+                    <li><a href="#">Info</a></li>
+                    <li><a href="#">Créer un compte</a></li>
+                    <li><a href="#">Se connecter</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
    <main>
+      <div class="fullpage">
       <div class="middle">
         <div class="content">
           <h1>Trouvez votre DEV</h1>
