--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   
-    <header>
+    <header class="js-document">
         <div class="menu-toggle" id="hamburger">
             <i class="fas fa-bars"></i>
         </div>
@@ -25,11 +25,12 @@
                 <ul>
                     <li><a href="#">Info</a></li>
                     <li><a href="#">Créer un compte</a></li>
-                    <li><a href="#">Se connecter</a></li>
+                    <li><a>Se connecter</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    
    <main>
       <div class="fullpage">
       <div class="middle">
@@ -39,6 +40,7 @@
             <label for="ajouter">Ajoutez un nom</label> :
             <input type="text" name="name" id="name">
             <input type="submit" value="+"> 
+
           </form>
           </div>
         <!--content-->
