--- a/index.html
+++ b/index.html
@@ -7,62 +7,62 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Anton%7CMerriweather+Sans&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Secouez-moi</title>
 </head>
 
 <body>
-  
-    <header class="js-document">
-        <div class="menu-toggle" id="hamburger">
-            <i class="fas fa-bars"></i>
-        </div>
-        <div class="overlay"></div>
-        <div class="container">
-            <nav>
-                <h1 class="brand"><a href="index.html"><span>Secouez</span>-moi...</a></h1>
-                <ul>
-                    <li><a href="#">Info</a></li>
-                    <li><a href="#">Créer un compte</a></li>
-                    <li><a>Se connecter</a></li>
-                </ul>
-            </nav>
-        </div>
+  <div class="fullpage">
+    <header>
+      <nav class="navbar">
+        <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
+          <i class="fa fa-bars"></i>
+        </label>
+        <a href="#" class="logo"><h1>Secouez-moi...</h1></a>
+        <input type="checkbox" id="chkToggle">
+        <ul class="main-nav" id="js-menu">
+          <li>
+            <a href="#info" id="information" class="nav-links">Info</a>
+          </li>
+          <li>
+            <a href="#" class="nav-links">Contact</a>
+          </li>
+          
+        </ul>
+      </nav>
     </header>
-    
-   <main>
-      <div class="fullpage">
+    <main>
       <div class="middle">
         <div class="content">
-          <h1>Trouvez votre DEV</h1>
-          <form>
-            <label for="ajouter">Ajoutez un nom</label> :
-            <input type="text" name="name" id="name">
-            <input type="submit" value="+"> 
-
-          </form>
-          </div>
+          <h2 class="trouver">Sélectionnez</h2>
+          <h2 class="hasard">au hasard</h2>
+          <div class="et">UN DEV...</div>
+        </div>
         <!--content-->
-      <div class="sidebar">
-        <div id="cellphone">
-          <div class="boite">
-            <div id="noms">
+        <div class="sidebar">
+          <div id="cellphone">
+            <div class="boite">
+              <div id="noms">
+              </div>
+              <div class="secouezmoi">
+                <img class="logosecouez" src="img/secouez-moiLogo.svg" alt="secouez-moi" width="200px">
+              </div>
+              <button class="btn-grad" id="callTOaction">Cliquez-ici
+              </button>
             </div>
-            <div class="secouezmoi">
-              <img src="img/secouez-moiLogo.svg" alt="secouez-moi" width="200px" >
+            <div class="hand">
+              <img src="img/main.png" width="100%" height="auto" alt="main">
             </div>
-            <button class="btn-grad" id="callTOaction">Cliquez-ici
-            </button>
+            <div class="container"></div>
           </div>
-          <div class="hand">
-            <img src="img/main.png" width="100%" height="100%" alt="main">
-          </div>
-          <div class="container"></div>
         </div>
       </div>
-    </div>
-    </main>
+    <section>
+      <div class="test">
+      </div>
+    </section>
+  </main>
     <footer>
     </footer>
   </div>
