--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
         <div class="overlay"></div>
         <div class="container">
             <nav>
-                <h1 class="brand"><a href="index.html"><span>Secouez</span>-moi...</a></h1>
+                <h1 class="brand">Secouez-moi...</h1>
                 <ul>
                     <li><a href="#">Info</a></li>
-                    <li><a href="#">Créer un compte</a></li>
-                    <li><a>Se connecter</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
