--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="fullpage">
-    <header>
+    <header id="haut">
       <nav class="navbar">
         <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
           <i class="fa fa-bars"></i>
@@ -38,6 +38,7 @@
           <h2 class="trouver">Sélectionnez</h2>
           <h2 class="hasard">au hasard</h2>
           <div class="et">UN DEV...</div>
+          <!--<div><img src="img/jeteste.png" alt="je teste" > </div> -->
         </div>
         <!--content-->
         <div class="sidebar">
@@ -64,6 +65,7 @@
     </section>
   </main>
     <footer>
+     <div>©les Dev déterminés <a href="#haut"><i class="fas fa-arrow-alt-circle-up"></i></a> </div>
     </footer>
   </div>
   <script src="javascript/script.js"></script>
