--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <input type="checkbox" id="chkToggle">
         <ul class="main-nav" id="js-menu">
           <li>
-            <a href="#info" id="information" class="nav-links">Info</a>
+            <a href="#info" id="information" class="nav-links">COMMENT JOUER? </a>
           </li>
           <li>
-            <a href="#" class="nav-links">Contact</a>
+            <a href="#" class="nav-links">CONTACT</a>
           </li>
           
         </ul>
@@ -37,7 +37,9 @@
         <div class="content">
           <h2 class="trouver">Sélectionnez</h2>
           <h2 class="hasard">au hasard</h2>
+          
           <div class="et">UN DEV...</div>
+          <a href="#info"><i id="iconeinfo" class="fas fa-info-circle"></i></a>
           <!--<div><img src="img/jeteste.png" alt="je teste" > </div> -->
         </div>
         <!--content-->
