modif contact us

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Anton%7CMerriweather+Sans&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+  <script src="javascript/script.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <title>Secouez-moi</title>
 </head>
@@ -65,6 +67,7 @@
       <div class="test">
       </div>
     </section>
+    <div class="contactsection">
     <h1>Contact us</h1>
     <form action="https://formspree.io/unicorncat.r.us@gmail.com" method="POST">
         <label>
@@ -84,12 +87,13 @@
         </div>
         <button type="submit" class="submit">Send</button>
     </form>
+  </div>
   </main>
     <footer>
      <div>©les Dev déterminés <a href="#haut"><i class="fas fa-arrow-alt-circle-up"></i></a> </div>
     </footer>
   </div>
-  <script src="javascript/script.js"></script>
+  
   <script type="text/javascript" src="https://cdn.rawgit.com/alexgibson/shake.js/master/shake.js"></script>
 </body>
 
